--- a/.env.example
+++ b/.env.example
@@ -24,3 +24,6 @@ LOG_LEVEL=info
 SWAGGER_TITLE=Northwind API
 SWAGGER_VERSION=1.0.0
 SWAGGER_DESCRIPTION=REST API for Northwind Database
+
+JWT_SECRET=your-super-secret-jwt-key-here
+JWT_EXPIRES_IN=24h
