--- a/package.json
+++ b/package.json
@@ -4,36 +4,44 @@
     "description": "Node.js REST API for Northwind Database with MySQL",
     "main": "server.js",
     "scripts": {
-      "start": "node server.js",
-      "dev": "nodemon server.js",
-      "test": "jest",
-      "migrate": "npx sequelize-cli db:migrate",
-      "seed": "npx sequelize-cli db:seed:all",
-      "setup": "npm run migrate && npm run seed"
+        "start": "node server.js",
+        "dev": "nodemon server.js",
+        "test": "jest",
+        "migrate": "npx sequelize-cli db:migrate",
+        "seed": "npx sequelize-cli db:seed:all",
+        "setup": "npm run migrate && npm run seed"
     },
-    "keywords": ["northwind", "api", "mysql", "sequelize", "express"],
+    "keywords": [
+        "northwind",
+        "api",
+        "mysql",
+        "sequelize",
+        "express"
+    ],
     "author": "Your Name",
     "license": "MIT",
     "dependencies": {
-      "express": "^4.18.2",
-      "mysql2": "^3.6.5",
-      "sequelize": "^6.35.2",
-      "cors": "^2.8.5",
-      "helmet": "^7.1.0",
-      "morgan": "^1.10.0",
-      "express-validator": "^7.0.1",
-      "compression": "^1.7.4",
-      "dotenv": "^16.3.1",
-      "swagger-jsdoc": "^6.2.8",
-      "swagger-ui-express": "^5.0.0"
+        "bcryptjs": "^3.0.2",
+        "compression": "^1.7.4",
+        "cors": "^2.8.5",
+        "dotenv": "^16.3.1",
+        "express": "^4.18.2",
+        "express-validator": "^7.0.1",
+        "helmet": "^7.1.0",
+        "jsonwebtoken": "^9.0.2",
+        "morgan": "^1.10.0",
+        "mysql2": "^3.6.5",
+        "sequelize": "^6.37.7",
+        "swagger-jsdoc": "^6.2.8",
+        "swagger-ui-express": "^5.0.0"
     },
     "devDependencies": {
-      "nodemon": "^3.0.2",
-      "jest": "^29.7.0",
-      "supertest": "^6.3.3",
-      "sequelize-cli": "^6.6.2"
+        "jest": "^29.7.0",
+        "nodemon": "^3.0.2",
+        "sequelize-cli": "^6.6.2",
+        "supertest": "^6.3.3"
     },
     "engines": {
-      "node": ">=18.0.0"
+        "node": ">=18.0.0"
     }
-  }
+}
